--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html,body{height:100%;margin:0;background:var(--bg);color:#111}
 .section--accent{background:var(--card-bg)}
 
 /* === HERO SECTION === */
-.hero {
+/*.hero {
   position: relative;
   height: 100vh;
   background: url('assets/images/FirstF.png') center center / cover no-repeat;
@@ -39,7 +39,7 @@ html,body{height:100%;margin:0;background:var(--bg);color:#111}
   border-bottom: 1px solid #eee;
   padding-left: 8vw; /* немного отступа от левого края */
 }
-
+*/
 .hero::before {
   content: "";
   position: absolute;
